--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ section{
 .news_card{
 	border: 2px solid var(--white-color);
 	border-radius: 4px;
-	box-shadow: inset 0 0 10px var(--white-color), 0 0 5px var(--white-color);
+	box-shadow: 0 0 5px var(--white-color);
 }
 
 .novedad{
@@ -133,6 +133,7 @@ section{
 
 .news_card_head > img{
 	width: 100%;
+	border-radius: 4px 4px 0 0  ;
 }
 
 .novedad_info{
@@ -154,6 +155,9 @@ section{
 	padding: 0 .5rem .5rem;
 }
 
+.news_card_body_nombre{
+	font-size: .8rem;
+}
 /* Fin estilos novedades */
 
 path{
