--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ section{
 	border: 2px solid var(--white-color);
 	border-radius: 4px;
 	box-shadow: 0 0 5px var(--white-color);
-	transition: transform ease .5s;
+	transition: all ease .5s;
 }
 
 .news_card:hover{
