--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,14 @@ section {
 .news_card {
 	border: 2px solid var(--white-color);
 	border-radius: 4px;
-	box-shadow: inset 0 0 10px var(--white-color), 0 0 5px var(--white-color);
+	box-shadow: 0 0 5px var(--white-color);
+	transition: all ease .5s;
+}
+
+.news_card:hover{
+	cursor: pointer;
+	opacity: .8;
+	transform: scale(1.08);
 }
 
 .novedad {
@@ -136,6 +143,7 @@ section {
 
 .news_card_head>img {
 	width: 100%;
+	border-radius: 4px 4px 0 0  ;
 }
 
 .novedad_info {
@@ -155,6 +163,10 @@ section {
 
 .news_card_body {
 	padding: 0 .5rem .5rem;
+}
+
+.news_card_body_nombre{
+	font-size: .8rem;
 }
 
 /* Fin estilos novedades */
@@ -376,9 +388,9 @@ option{
 	color: black	;
 }
 
-span{
+/* span{
 	color: red !important; 
-}
+} */
 
 input[type="submit"]{
 	border: white;
@@ -418,4 +430,37 @@ fieldset {
 	background-color: #070707;
 	border-radius: 5px;
 	width: 90%;
+}
+
+.modal{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: #000000ee;
+	z-index: 1000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	backdrop-filter: blur(10px)
+}
+
+.cierre{
+	position: fixed;
+	top: 0;
+	right: 1%;
+	z-index: 1000;
+	cursor: pointer;
+	font-size: 32px;
+	color: #f1b40d;
+	background-color: #c517174d;
+	width: 40px;
+	height: 40px;
+	border-radius: 100%;
+	text-align: center;
+}
+
+.hiden{
+	display: none;
 }
