--- a/css/styles.css
+++ b/css/styles.css
@@ -432,6 +432,13 @@ fieldset {
 	width: 90%;
 }
 
+.details_container{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
 .modal{
 	position: fixed;
 	top: 0;
@@ -441,8 +448,8 @@ fieldset {
 	background-color: #000000ee;
 	z-index: 1000;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	justify-content: space-around;
+	/* align-items: center; */
 	backdrop-filter: blur(10px)
 }
 
@@ -463,4 +470,25 @@ fieldset {
 
 .hiden{
 	display: none;
+}
+
+.details_genres{
+	background-color: #33383b;
+	border-radius: 8px;
+	padding: .2rem;
+	margin: .2rem ;
+	font-size: .7rem;
+}
+
+.genres_container{
+	margin-bottom: 5rem;
+}
+
+.trailer{
+	margin: 1rem;
+	margin-bottom: 5rem;
+}
+
+.details_overview{
+	max-width: 560px;
 }
