--- a/css/styles.css
+++ b/css/styles.css
@@ -258,6 +258,14 @@ h5 > a{
 	justify-content: space-around;
 	/* align-items: center; */
 	backdrop-filter: blur(10px);
+	padding: 1rem;
+}
+
+.details_container{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .cierre{
@@ -294,10 +302,12 @@ h5 > a{
 .trailer{
 	margin: 1rem;
 	margin-bottom: 5rem;
+	max-width: 90%;
 }
 
 .details_overview{
-	max-width: 560px;
+	max-width: 60%;
+	overflow: auto;
 }
 
 /* Pagina de contacto */
